[package]
name = "oid4vci"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "OpenID for Verifiable Credentials Issuance"
repository = "https://github.com/spruceid/oidc4vci-rs/"

[features]
reqwest = ["oauth2/reqwest"]

[dependencies]
# TODO feature-gate
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "6084a83" }
ssi = { version = "0.10.1", features = ["secp256r1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
serde_path_to_error = "0.1.14"
url = { version = "2.3.1", features = ["serde"] }
oauth2 = { version = "5.0.0-alpha.4", features = [
    "timing-resistant-secret-traits",
] }
async-signature = "0.3.0"
rand = "0.8.5"
time = { version = "0.3.29", features = ["serde"] }
thiserror = "1.0.49"
tracing = "0.1"
base64 = "0.21.4"
serde_urlencoded = "0.7.1"
anyhow = "1.0.86"
sha2 = "0.10.8"
form_urlencoded = "1.2.1"
percent-encoding = "2.3.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
tokio = { version = "1.25.0", features = ["macros"] }
oid4vci = { path = ".", features = ["reqwest"] }
