[package]
name = "oid4vci"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "OpenID for Verifiable Credentials Issuance"
repository = "https://github.com/spruceid/oid4vci-rs"

[features]
# Support for `reqwest` in the `open-oauth2` library.
reqwest = ["open-auth2/reqwest"]

# MSO mDoc encoding/decoding with the `isomdl` library.
isomdl = ["dep:isomdl"]

# Axum support.
axum = ["dep:axum", "dep:axum-extra", "open-auth2/axum"]

# Integer JWT timestamps only.
#
# Just because some implementations don't like non-integer timestamps in JWTs
# (even though they should).
integer-ts = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
serde_path_to_error = "0.1.14"
open-auth2 = { git = "https://github.com/spruceid/open-auth2-rs", rev = "81a62aa" }
base64 = "0.21.4"
rand = "0.9.2"
time = { version = "0.3.29", features = ["serde"] }
thiserror = "1.0.49"
serde_urlencoded = "0.7.1"
form_urlencoded = "1.2.1"
indexmap = "2.13.0"
iref = { version = "3.2.2", features = ["macros"] }
pct-str = "2.0.0"
langtag = { version = "0.4.0", features = ["serde"] }
json-ld = "0.21.2"
ssi = { version = "0.15", features = ["secp256r1"] }
str-newtype = "2.0.0"

# Server only
axum = { version = "0.8.8", optional = true }
axum-extra = { version = "0.12.5", features = ["typed-header"], optional = true }

# ISO MDL support.
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "7608053", optional = true }
pin-project = "1.1.10"
log = "0.4.29"

[dev-dependencies]
assert-json-diff = "2.0.2"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "fs"] }
oid4vci = { path = ".", features = ["reqwest", "axum"] }
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
hyper = { version = "1.8.1", features = ["server"] }
hyper-util = "0.1.19"
http-body-util = "0.1.3"
dashmap = "6.1.0"
anyhow = "1.0.86"